--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@ android:versionName="1.0" >
     android:minSdkVersion="8"
     android:targetSdkVersion="21" />
 
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 <application
     android:allowBackup="true"
     android:largeHeap="true"
