--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.github.wendykierp:JTransforms:3.0'
-    compile files('src/main/java/com/example/jassmanntj/leafapp/parallelcolt-0.10.0.jar')
+    compile files('src/main/java/com/example/jassmanntj/leafapp/parallelcolt-0.9.4.jar')
+    compile files('src/main/java/com/example/jassmanntj/leafapp/jtransforms.jar')
 }
