--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@ android:versionName="1.0" >
     android:targetSdkVersion="21" />
 
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+<uses-feature android:name="android.hardware.camera"
+    android:required="true" />
 
 <application
     android:allowBackup="true"
