--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,6 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-        ndk {
-            moduleName "app"
-        }
     }
     buildTypes {
         release {
@@ -27,11 +24,23 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile files('src/main/java/com/example/jassmanntj/leafapp/parallelcolt-0.9.4.jar')
+    compile 'gov.nist.math:jama:1.0.3'
+    compile('net.sourceforge.parallelcolt:parallelcolt:0.10.1') {
+        exclude module: 'jtransforms'
+        exclude module: 'jplasma'
+        //exclude module: 'netlib-java'
+    }
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/parallelcolt-0.9.4.jar')
     compile files('src/main/java/com/example/jassmanntj/leafapp/jtransforms.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/netlib-java.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/optimization.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/junit.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/jplasma.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/csparsej.jar')
+    //compile 'com.github.fommil.netlib:native_system-java:1.1'
+    //compile 'com.github.fommil.netlib:all:1.1.2'
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/netlib-java.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/optimization.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/junit.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/jplasma.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/csparsej.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/f2jutil.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/netlib-java.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/lapack.jar')
+    //compile files('src/main/java/com/example/jassmanntj/leafapp/xerbla.jar')
 }
