--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'gov.nist.math:jama:1.0.3'
-    compile files('src/main/java/com/example/jassmanntj/leafapp/DeviceNN.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/JLargeArrays-1.3.jar')
-    compile files('src/main/java/com/example/jassmanntj/leafapp/JTransforms-3.0.jar')
+    compile 'com.github.wendykierp:JTransforms:3.0'
+    compile 'org.imgscalr:imgscalr-lib:4.2'
+    compile files('src/main/java/NeuralNetwork.jar')
 }
