--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@ android:versionName="1.0" >
     android:label="@string/app_name"
     android:theme="@style/AppTheme" >
     <activity
+        android:screenOrientation="portrait"
         android:name=".MainActivity"
+        android:configChanges="keyboardHidden|orientation|screenSize"
         android:label="@string/app_name" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
